test/compile_errors/err_await_requires_task.w
//! expect-error: await requires a Task value

fn main:
    let x = 42
    let y = x.await
